tests/ui/delegation/parse.stderr
error: expected item, found keyword `unsafe`
  --> $DIR/parse.rs:29:1
   |
LL | unsafe reuse reuse::to_unsafe;
   | ^^^^^^ expected item
   |
   = note: for a full list of items that can appear in modules, see <https://doc.rust-lang.org/reference/items.html>

error: aborting due to 1 previous error

